@@ -282,167 +282,7 @@ function	script	F_ItemName	{
 //////////////////////////////////////////////////////////////////////////////////
 
 function	script	getJobName	{
-	switch(getarg(0)){
-		case Job_Novice:
-			return "Novice";
-		case Job_Swordman:
-			return "Swordman";
-		case Job_Mage:
-			return "Magician";
-		case Job_Archer:
-			return "Archer";
-		case Job_Acolyte:
-			return "Acolyte";
-		case Job_Merchant:
-			return "Merchant";
-		case Job_Thief:
-			return "Thief";
-		case Job_Knight:
-		case Job_Knight2:
-			return "Knight";
-		case Job_Priest:
-			return "Priest";
-		case Job_Wizard:
-			return "Wizard";
-		case Job_Blacksmith:
-			return "Blacksmith";
-		case Job_Hunter:
-			return "Hunter";
-		case Job_Assassin:
-			return "Assassin";
-		case Job_Crusader:
-		case Job_Crusader2:
-			return "Crusader";
-		case Job_Monk:
-			return "Monk";
-		case Job_Sage:
-			return "Sage";
-		case Job_Rogue:
-			return "Rogue";
-		case Job_Alchem:
-			return "Alchemist";
-		case Job_Bard:
-			return "Bard";
-		case Job_Dancer:
-			return "Dancer";
-		case Job_SuperNovice:
-			return "Super Novice";
-		case Job_Gunslinger:
-			return "Gunsligner";
-		case Job_Ninja:
-			return "Ninja";
-		case Job_Xmas:
-			return "Xmas";
-		case Job_Novice_High:
-			return "Novice High";
-		case Job_Swordman_High:
-			return "Swordman High";
-		case Job_Mage_High:
-			return "Magician High";
-		case Job_Archer_High:
-			return "Archer High";
-		case Job_Acolyte_High:
-			return "Acolyte High";
-		case Job_Merchant_High:
-			return "Merchant High";
-		case Job_Thief_High:
-			return "Thief High";
-		case Job_Lord_Knight:
-		case Job_Lord_Knight2:
-			return "Lord Knight";
-		case Job_High_Priest:
-			return "High Priest";
-		case Job_High_Wizard:
-			return "High Wizard";
-		case Job_Whitesmith:
-			return "Whitesmith";
-		case Job_Sniper:
-			return "Sniper";
-		case Job_Assassin_Cross:
-			return "Assassin Cross";
-		case Job_Paladin:
-		case Job_Paladin2:
-			return "Paladin";
-		case Job_Champion:
-			return "Champion";
-		case Job_Professor:
-			return "Professor";
-		case Job_Stalker:
-			return "Stalker";
-		case Job_Creator:
-			return "Creator";
-		case Job_Clown:
-			return "Clown";
-		case Job_Gypsy:
-			return "Gypsy";
-		case Job_Baby:
-			return "Baby";
-		case Job_Baby_Swordman:
-			return "Baby Swordman";
-		case Job_Baby_Mage:
-			return "Baby Magician";
-		case Job_Baby_Archer:
-			return "Baby Archer";
-		case Job_Baby_Acolyte:
-			return "Baby Acolyte";
-		case Job_Baby_Merchant:
-			return "Baby Merchant";
-		case Job_Baby_Thief:
-			return "Baby Thief";
-		case Job_Baby_Knight:
-		case Job_Baby_Knight2:
-			return "Baby Knight";
-		case Job_Baby_Priest:
-			return "Baby Priest";
-		case Job_Baby_Wizard:
-			return "Baby Wizard";
-		case Job_Baby_Blacksmith:
-			return "Baby Blacksmith";
-		case Job_Baby_Hunter:
-			return "Baby Hunter";
-		case Job_Baby_Assassin:
-			return "Baby Assassin";
-		case Job_Baby_Crusader:
-		case Job_Baby_Crusader2:
-			return "Baby Crusader";
-		case Job_Baby_Monk:
-			return "Baby Monk";
-		case Job_Baby_Sage:
-			return "Baby Sage";
-		case Job_Baby_Rogue:
-			return "Baby Rogue";
-		case Job_Baby_Alchem:
-			return "Baby Alchemist";
-		case Job_Baby_Bard:
-			return "Baby Bard";
-		case Job_Baby_Dancer:
-			return "Baby Dancer";
-		case Job_Super_Baby:
-			return "Super Baby";
-		case Job_Taekwon:
-			if(Sex == 0)
-				return "Taekwon Girl";
-			else
-				return "Taekwon Boy";
-		case Job_Star_Gladiator:
-		case Job_Star_Gladiator2:
-			return "Star Gladiator";
-		case Job_Soul_Linker:
-			return "Soul Linker";
-		case Job_Ninja:
-			return "Ninja";
-		case Job_Gunslinger:
-			return "Gunslinger";
-		case Job_Xmas:
-			return "Christmas";
-		case Option_Wedding:
-			if(Sex == 0)
-				return "Bride";
-			else
-				return "Bridegroom";
-		default:
-			return "omghaxor";
-	}
+	return jobname(getarg(0));
 }
 
 //////////////////////////////////////////////////////////////////////////////////
